--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,10 +1,7 @@
 ---
-name: Prabhu Kiran Konda
-avatar: /static/images/avatar.jpg
+name: Anh Nguyen
+avatar: https://avatars.githubusercontent.com/u/42261776
 occupation: A Tech Enthusiast
 company:
-email: prabhukiran426@gmail.com
-twitter: https://twitter.com/prabhukirantwt
-linkedin: https://www.linkedin.com/in/prabhukirankonda
-github: https://github.com/PrabhuKiran8790
+github: https://github.com/anhnmt
 ---
