--- a/data/blog/sveltekit-authjs-prisma.mdx
+++ b/data/blog/sveltekit-authjs-prisma.mdx
@@ -4,7 +4,7 @@ summary: "let's see how to integrate Github and Google OAuth authentication usin
 date: '2023-09-28'
 draft: false
 tags: ['Svelte', 'TypeScript', 'Prisma']
-authors: ['prabhu']
+authors: ['anhnmt']
 layout: PostSimple
 ---
 
