--- a/data/authors/default.mdx
+++ b/data/authors/default.mdx
@@ -1,5 +1,5 @@
 ---
-name: Anh Nguyen
+name: Admin
 avatar: https://avatars.githubusercontent.com/u/42261776
 occupation: A Tech Enthusiast
 company:
