--- a/data/blog/dimensionality-reduction-using-auto-encoders.mdx
+++ b/data/blog/dimensionality-reduction-using-auto-encoders.mdx
@@ -5,7 +5,7 @@ date: '2023-08-22'
 draft: false
 tags: ['Python', 'Machine Learning']
 authors: ['anhnmt']
-layout: PostSimple
+layout: PostLayout
 ---
 
 <TOCInline toc={props.toc} asDisclosure />
