update post: Cách khắc phục khi ổ đĩa bị đầy trong quá trình sử dụng Docker?

--- a/clr64it9z00020al3b5li8269.md
+++ b/clr64it9z00020al3b5li8269.md
@@ -145,7 +145,7 @@ docker system prune -a -f
 
 ## Xoá các container logs
 
-Thứ chiếm dung lượng ổ đĩa tiếp theo là Docker Json Logs, mặc định khi cài Docker thì toàn bộ logs của container sẽ được Docker lưu ở thư mục /var/lib/docker/containers/\* ở dạng json, nếu ta không thường xuyên xóa logs ở thư mục này thì nó sẽ lên tới vài chục hoặc vài trăm GB.
+Thứ chiếm dung lượng ổ đĩa tiếp theo là Docker Json Logs, mặc định khi cài Docker thì toàn bộ logs của container sẽ được Docker lưu ở thư mục `/var/lib/docker/containers/\*` ở dạng json, nếu ta không thường xuyên xóa logs ở thư mục này thì nó sẽ lên tới vài chục hoặc vài trăm GB.
 
 Để xóa logs ở thư mục này ta có vài cách sau:
 
@@ -156,7 +156,7 @@ Thứ chiếm dung lượng ổ đĩa tiếp theo là Docker Json Logs, mặc đ
 * Giới hạn dung lượng logs của container
     
 
-Dọn dẹp log của container, đơn giản là làm nó trống trơn. (Sử dụng quyền `root` nếu bị lỗi `Permission denied`)
+Dọn dẹp log của container, đơn giản là làm nó trống trơn. (Sử dụng quyền `root` nếu bị lỗi `Permission denied` )
 
 ### Xóa thủ công với crontab
 
